# learning-paths

./: .gitignore  .quartoignore  LICENSE  README.md  _quarto.yml  index.qmd  pyproject.toml
_includes/: github-button.html
data/: extra_methods_eng.csv  form_data.csv  obstacles.csv  obstacles_eng.csv  obstacles_map.json
docs/: index.html  search.json  styles.css
docs/notebooks/: correlations.html  data_exploration.html  methods.html  obstacles.html  stopped_learning.html
notebooks/: correlations.qmd  data_exploration.qmd  index.qmd  methods.qmd  obstacles.qmd  stopped_learning.qmd  stopped_learning.quarto_ipynb
src/client/: gemini.py
src/common/: column.py
src/scripts/: list_obstacles.py  map_obstacles.py  preprocess.py  translate.py
src/ui/data_tables/: examples_table.py  exploration_table.py
