[project]
name = "learning-paths"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.11",
    "jupyter>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "google-generativeai>=0.8",
]
